@@ -9,6 +9,12 @@
     three lines of the file (to allow for a shebang or modeline).
   * Added RDoc::TopLevel#text? and RDoc::Parser::Text to indicate a
     parsed file contains no ruby constructs.
+  * Added <tt>rdoc-label</tt> link scheme which allows bidirectional links.
+  * See RDoc::
+
+* Bug fixes
+  * Loosened TIDYLINK regexp to allow any content in the link section like:
+    <tt>{foo}[rdoc-ref:SomeClass]</tt>
 
 === 3.9.1 / 2011-07-31
 
